--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 				<nav class="nav" data-aos="zoom-in" data-aos-duration="500">
 					<ul>
 						<li class="is-active">
-							<a href="index.html">
+							<a href="home.html">
 								<strong>EB</strong>
 							</a>
 						</li>
